[package]
name = "chroni"
version = "0.4.0"
authors = ["猫羽黑夜 <THE_cattail@k-neco.moe>"]
edition = "2021"
description = "A mirror backup tool by Cattail Magic Lab"
repository = "https://github.com/THE-cattail/chroni"
license = "MIT"
keywords = ["backup"]
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["cargo", "derive"] }
env_logger = "0.9"
food-rs = { version = "0.1.0", path = "../food-rs" }
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
sha1 = "0.10"
toml = "0.4"
wildmatch = "2.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
