[package]
name = "chroni"
version = "0.4.0"
authors = ["猫羽黑夜 <THE_cattail@k-neco.moe>"]
edition = "2021"
description = "A mirror backup tool by Cattail Magic Lab"
repository = "https://github.com/THE-cattail/chroni"
license = "MIT"
keywords = ["backup"]
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4", features = ["cargo", "derive"] }
color-eyre = "^0"
env_logger = "^0"
inquire = "^0"
once_cell = "^1"
serde = "^1"
serde_derive = "^1"
sha1 = "^0"
toml = "^0"
tracing = "^0"
wildmatch = "^2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
