[package]
name = "chroni"
version = "1.0.0"
authors = ["猫羽黑夜 <THE_cattail@k-neco.moe>"]
edition = "2021"
description = "A mirror backup tool by Cattail Magic Lab"
repository = "https://github.com/THE-cattail/chroni"
license = "MIT"
keywords = ["backup"]
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
clap = { version = "^4", features = ["cargo", "derive"] }
console = "^0"
env_logger = "^0"
globset = "^0"
ignore = "^0"
indicatif = "^0"
log = "^0"
sha1 = "^0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
